# rag_test

./: Dockerfile  pyproject.toml
rag_test/rag-tutorial-v2/: get_embedding_function.py  populate_database.py  query_data.py
